--- a/weisserhai.html
+++ b/weisserhai.html
@@ -61,10 +61,37 @@
                     <div class="col align-self-center" id="tiertext">
                         
                         <h2>Weisser Hai</h2>
-                        <p class="text-left">Weisse Haie die Raubtiere der Meere. Sie sind eines der <b>seltensten</b> Tiere auf der Welt. So selten sogar, dass nicht einmal Experten sich sicher sind wie viele es überhaupt gibt. Schätzungen gehen von 4000 bis zu 25000.</p> 
-                        <p class="text-left">Weisse Haie (Carcharodon carcharias) gehören zur Familie der Makrelenhaie. Ihre Zähne sind bis zu 7.5cm lang und in mehreren Reihen hintereinander, ein sogenanntes Revolvergebiss. Weisse Haie haben sehr gute Augen mit denen sie selbst schwaches Licht war nehmen können. Des Weiteren haben Haie spezielle Geschmacksknospen, die über ihren Körper verteilt sind, deswegen erkennen Haie ihre Beute schon durchs Reiben. Sie haben fünf extra lange Kiemenspalten vor den Brustflossen, durch die sie Sauerstoff aus dem Wasser nehmen. Zwischen Nase und Mund besitzen Haie Elektrosensoren, auch gennant Lorenzinische Ampullen. Damit nehmen sie elektrische Felder wahr. Weisse Haie können ausserdem auch einen Tropfen Blut in der Wassermenge eines Schwimmbeckens riechen. Weibliche Weisse Haie werden  zwischen 4.5 und 5 Meter lang und bis 2 tonnen schwer. Dies macht den Weissen Hai zum grössten Raubfisch der Erde. Die Männlichen Weissen Haie sind ein bisschen kleiner und leichter.</p> 
-                        <p class="text-left">In denen gebieten sind weisse Haie verbreitet (Siehe Bild).</p>
-                        
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col"></th>
+                                <th scope="col">Beschreibung</th>
+
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">Lebensraum</th>
+                                <td>Bedingt durch ihr Fressverhalten findet man Weiße Haie vorwiegend in der Nähe von Seelöwen-, Seehund- oder Seeelefantenkolonien, z. B. in Südafrika, Südaustralien oder Kalifornien.</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Geografische Verbreitung</th>
+                                <td>Weiße Haie kommen weltweit in den gemäßigten Regionen, im Winter auch in subtropischen und tropischen Meeren vor.</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Gefährdungsstatus</th>
+                                <td>IUCN: als "gefährdet" eingestuft, Die Weißen Haie des Mittelmeers gelten bereits als "stark gefährdet". Bei anderen regionalen Populationen wird noch überprüft, ob der Status auf "vom Aussterben bedroht" erhöht wird.</td>
+
+                              </tr>
+                              <tr>
+                                <th scope="rwo">Bestandsgrösse</th>
+                                <td>keine Gesamtbestandszahlen aufgrund mangelnder Datengrundlage bekannt</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <div class="divider-a"></div>
+                        <h3>Der Räuber wird zur Beute</h3>
+                        <p>Weiße Haie aus der Familie der Heringshaie haben eine durchschnittliche Länge zwischen drei und sechs Metern und erreichen ein Gewicht von maximal etwa 2.000 Kilogramm, wobei die Weibchen meistens größer werden als die Männchen. Die großen scharfen Zähne können bei ausgewachsenen Tieren eine Länge von 7,5 Zentimeter erreichen. Das größte Exemplar, das jemals gefangen wurde, war mit einem Gewicht von 3,2 Tonnen 6,40 Meter lang. Spuren an Walkadavern lassen Experten allerdings vermuten, dass die Tiere bis zu acht Meter lang werden können.</p>
 
                     </div>
             </div>
