--- a/weisserhai.html
+++ b/weisserhai.html
@@ -92,6 +92,8 @@
                           <div class="divider-a"></div>
                         <h3>Der Räuber wird zur Beute</h3>
                         <p>Weiße Haie aus der Familie der Heringshaie haben eine durchschnittliche Länge zwischen drei und sechs Metern und erreichen ein Gewicht von maximal etwa 2.000 Kilogramm, wobei die Weibchen meistens größer werden als die Männchen. Die großen scharfen Zähne können bei ausgewachsenen Tieren eine Länge von 7,5 Zentimeter erreichen. Das größte Exemplar, das jemals gefangen wurde, war mit einem Gewicht von 3,2 Tonnen 6,40 Meter lang. Spuren an Walkadavern lassen Experten allerdings vermuten, dass die Tiere bis zu acht Meter lang werden können.</p>
+                        <p>Weiße Haie kommen weltweit in den gemäßigten Regionen, im Winter auch in subtropischen und tropischen Meeren vor. Bedingt durch ihr Fressverhalten findet man Weiße Haie vorwiegend in der Nähe von Seelöwen-, Seehund- oder Seeelefantenkolonien. Anfang des Jahrtausends wurden mehrere Weiße Haie vor Kalifornien, Australien und Südafrika besendert und ihre Wanderungen über Satellit verfolgt. Es stellte sich heraus, dass sich die Tiere bis zu fünf Monate im Jahr auf hoher See aufhalten, bis zu 11.000 Kilometer wandern und bis 1.000 Meter tief tauchen. Genetische Studien an Populationen in Südafrika, Australien und Neuseeland geben Grund zur Annahme, dass vor allem die männlichen Tiere regelmäßig zwischen den Populationen wandern und dabei für einen Gen-Austausch sorgen.s</p>
+                        <p>Quelle:<a href="https://www.wwf.de/themen-projekte/artenlexikon/weisser-hai">https://www.wwf.de/themen-projekte/artenlexikon/weisser-hai</a></p>
 
                     </div>
             </div>
