--- a/weisserhai.html
+++ b/weisserhai.html
@@ -100,7 +100,7 @@
         </div>
 
 
-    <div class="divider-b"></div>
+    <div class="divider-a"></div>
     <footer class="text-center text-white">
         <!-- Grid container -->
         <div class="container p-4"></div>
