--- a/index.html
+++ b/index.html
@@ -42,23 +42,27 @@
                 <p class="text-break">
                     Dies ist die offzielle Seite des Meeres Zoo. Hier zu finden sind sind 6 verschiedene Fischarten, die nicht nur selten sondern unglaublich faszinierend sind. Schaut es euch selbst an.
                 </p>
+
                 <ul>
-                    <li>Folgende Tiere gibt es Bei uns</li>
-                    <ul>
-                        <li>Delfine</li>
-                        <li>Weisse Haie</li>
-                        <li>Blaue Wale</li>
-                        <li>Mekong Riesenwels</li>
-                        <li>Riemenfische</li>
-                        <li>Riesenmantas</li>
-                    </ul>
+                    <li>Folgende Tiere gibt es Bei uns
+                        <ul>
+                            <li>Delfine</li>
+                            <li>Weisse Haie</li>
+                            <li>Blaue Wale</li>
+                            <li>Mekong Riesenwels</li>
+                            <li>Riemenfische</li>
+                            <li>Riesenmantas</li>
+                        </ul>
+                    </li>
                     <li>Von jedem Tier gibt es 2 Paare</li>
-                    <li>Zukünftige Zugänge</li>
-                    <ul>
-                        <li>Orcas</li>
-                        <li>Hammer Haie</li>
-                    </ul>
+                    <li>Zukünftige Zugänge
+                        <ul>
+                            <li>Orcas</li>
+                            <li>Hammer Haie</li>
+                        </ul>
+                    </li>
                 </ul>
+                
             </div>
         </div>
     </div>
